--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
+    "react-native-sweet-alert": "^3.5.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
