--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/stack": "^6.3.1",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-dropdown-select-list": "^1.0.21",
     "react-native-gesture-handler": "^2.6.1",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "^4.3.4",
